Some layout fixes, including input width on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ body {
   }
 
   .main-layout-content {
-    @apply col-start-2 container max-w-md sm:max-w-2xl mx-auto;
+    @apply col-start-2 container w-auto sm:max-w-2xl mx-auto;
   }
 
   .text-balance {
